--- a/cwiczenie1_analiza.ipynb
+++ b/cwiczenie1_analiza.ipynb
@@ -108,6 +108,471 @@
     }
    ],
    "execution_count": 4
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "# Biblioteka NumPy\n",
+    "\n",
+    "Napisana w C, do szybkich operacji na danych tablicowych\\\n",
+    "Podstawowy element: ndarray"
+   ],
+   "id": "2e80c2c0c60f8751"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T13:29:52.680981Z",
+     "start_time": "2025-11-17T13:29:51.727241Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "!pip list",
+   "id": "96cc880592317274",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Package                   Version\n",
+      "------------------------- -----------\n",
+      "anyio                     4.11.0\n",
+      "argon2-cffi               25.1.0\n",
+      "argon2-cffi-bindings      25.1.0\n",
+      "arrow                     1.4.0\n",
+      "asttokens                 3.0.1\n",
+      "async-lru                 2.0.5\n",
+      "attrs                     25.4.0\n",
+      "babel                     2.17.0\n",
+      "beautifulsoup4            4.14.2\n",
+      "bleach                    6.3.0\n",
+      "certifi                   2025.11.12\n",
+      "cffi                      2.0.0\n",
+      "charset-normalizer        3.4.4\n",
+      "colorama                  0.4.6\n",
+      "comm                      0.2.3\n",
+      "debugpy                   1.8.17\n",
+      "decorator                 5.2.1\n",
+      "defusedxml                0.7.1\n",
+      "executing                 2.2.1\n",
+      "fastjsonschema            2.21.2\n",
+      "fqdn                      1.5.1\n",
+      "h11                       0.16.0\n",
+      "httpcore                  1.0.9\n",
+      "httpx                     0.28.1\n",
+      "idna                      3.11\n",
+      "ipykernel                 7.1.0\n",
+      "ipython                   9.7.0\n",
+      "ipython_pygments_lexers   1.1.1\n",
+      "isoduration               20.11.0\n",
+      "jedi                      0.19.2\n",
+      "Jinja2                    3.1.6\n",
+      "json5                     0.12.1\n",
+      "jsonpointer               3.0.0\n",
+      "jsonschema                4.25.1\n",
+      "jsonschema-specifications 2025.9.1\n",
+      "jupyter_client            8.6.3\n",
+      "jupyter_core              5.9.1\n",
+      "jupyter-events            0.12.0\n",
+      "jupyter-lsp               2.3.0\n",
+      "jupyter_server            2.17.0\n",
+      "jupyter_server_terminals  0.5.3\n",
+      "jupyterlab                4.4.10\n",
+      "jupyterlab_pygments       0.3.0\n",
+      "jupyterlab_server         2.28.0\n",
+      "lark                      1.3.1\n",
+      "MarkupSafe                3.0.3\n",
+      "matplotlib-inline         0.2.1\n",
+      "mistune                   3.1.4\n",
+      "mypy                      1.18.2\n",
+      "mypy_extensions           1.1.0\n",
+      "nbclient                  0.10.2\n",
+      "nbconvert                 7.16.6\n",
+      "nbformat                  5.10.4\n",
+      "nest-asyncio              1.6.0\n",
+      "notebook                  7.4.7\n",
+      "notebook_shim             0.2.4\n",
+      "packaging                 25.0\n",
+      "pandocfilters             1.5.1\n",
+      "parso                     0.8.5\n",
+      "pathspec                  0.12.1\n",
+      "pip                       25.1.1\n",
+      "platformdirs              4.5.0\n",
+      "prometheus_client         0.23.1\n",
+      "prompt_toolkit            3.0.52\n",
+      "psutil                    7.1.3\n",
+      "pure_eval                 0.2.3\n",
+      "pycparser                 2.23\n",
+      "Pygments                  2.19.2\n",
+      "python-dateutil           2.9.0.post0\n",
+      "python-json-logger        4.0.0\n",
+      "pywinpty                  3.0.2\n",
+      "PyYAML                    6.0.3\n",
+      "pyzmq                     27.1.0\n",
+      "referencing               0.37.0\n",
+      "requests                  2.32.5\n",
+      "rfc3339-validator         0.1.4\n",
+      "rfc3986-validator         0.1.1\n",
+      "rfc3987-syntax            1.1.0\n",
+      "rpds-py                   0.29.0\n",
+      "Send2Trash                1.8.3\n",
+      "setuptools                80.9.0\n",
+      "six                       1.17.0\n",
+      "sniffio                   1.3.1\n",
+      "soupsieve                 2.8\n",
+      "stack-data                0.6.3\n",
+      "terminado                 0.18.1\n",
+      "tinycss2                  1.4.0\n",
+      "tornado                   6.5.2\n",
+      "traitlets                 5.14.3\n",
+      "typing_extensions         4.15.0\n",
+      "tzdata                    2025.2\n",
+      "uri-template              1.3.0\n",
+      "urllib3                   2.5.0\n",
+      "wcwidth                   0.2.14\n",
+      "webcolors                 25.10.0\n",
+      "webencodings              0.5.1\n",
+      "websocket-client          1.9.0\n"
+     ]
+    }
+   ],
+   "execution_count": 5
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T13:30:28.883470Z",
+     "start_time": "2025-11-17T13:30:15.998737Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "!pip install numpy",
+   "id": "6b8ec30f857afe5a",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting numpy\n",
+      "  Downloading numpy-2.3.5-cp314-cp314-win_amd64.whl.metadata (60 kB)\n",
+      "Downloading numpy-2.3.5-cp314-cp314-win_amd64.whl (12.9 MB)\n",
+      "   ---------------------------------------- 0.0/12.9 MB ? eta -:--:--\n",
+      "   ---------------------------------------  12.8/12.9 MB 96.7 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 12.9/12.9 MB 68.8 MB/s eta 0:00:00\n",
+      "Installing collected packages: numpy\n",
+      "Successfully installed numpy-2.3.5\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 25.1.1 -> 25.3\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
+   "execution_count": 6
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T13:31:17.751475Z",
+     "start_time": "2025-11-17T13:31:17.153496Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "import numpy as np",
+   "id": "7e99efe6e8b040d3",
+   "outputs": [],
+   "execution_count": 7
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T13:32:04.551155Z",
+     "start_time": "2025-11-17T13:32:04.546103Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "lista = [2, 4, 6, 8, 10]\n",
+    "lista"
+   ],
+   "id": "62035bd3cd184c89",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 4, 6, 8, 10]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 8
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T13:32:26.797978Z",
+     "start_time": "2025-11-17T13:32:26.791295Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "a = np.array(lista)\n",
+    "a"
+   ],
+   "id": "4ee27c35d5c0e7d9",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 2,  4,  6,  8, 10])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 9
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T13:32:49.617410Z",
+     "start_time": "2025-11-17T13:32:49.612866Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(type(a))",
+   "id": "c622a5115c0934fb",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
+   "execution_count": 10
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T13:33:32.160472Z",
+     "start_time": "2025-11-17T13:33:32.155904Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(a.dtype)",
+   "id": "f9bc223e8f54e49b",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "int64\n"
+     ]
+    }
+   ],
+   "execution_count": 11
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "int64 - 8 bajtów",
+   "id": "8a4f19b41a2b8c39"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T13:34:57.099130Z",
+     "start_time": "2025-11-17T13:34:57.094214Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(a.shape)  # kształt tablicy",
+   "id": "24838b11ccfbf3a3",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5,)\n"
+     ]
+    }
+   ],
+   "execution_count": 12
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T13:35:48.915783Z",
+     "start_time": "2025-11-17T13:35:48.909954Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "p = np.zeros((3, 3))  # tablica z zerami\n",
+    "p"
+   ],
+   "id": "3f3d8b29b9db6dc8",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0.],\n",
+       "       [0., 0., 0.],\n",
+       "       [0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 13
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T13:36:30.171729Z",
+     "start_time": "2025-11-17T13:36:30.167480Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(p.dtype)",
+   "id": "12997706a04c6a45",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "float64\n"
+     ]
+    }
+   ],
+   "execution_count": 14
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "float64 - 8 bitów",
+   "id": "5d72caaed4a64afa"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T13:37:24.755263Z",
+     "start_time": "2025-11-17T13:37:24.749551Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "q = np.ones((2, 2))  # tablica jedynek\n",
+    "q"
+   ],
+   "id": "a6d44ad7e0798854",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 1.],\n",
+       "       [1., 1.]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 15
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T13:37:39.775047Z",
+     "start_time": "2025-11-17T13:37:39.771408Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "q.dtype",
+   "id": "7a4ca984f92ceb7a",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('float64')"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 16
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T13:38:16.622307Z",
+     "start_time": "2025-11-17T13:38:16.608372Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "s = np.eye(4)\n",
+    "s"
+   ],
+   "id": "a8a8ee394cca914b",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0., 0.],\n",
+       "       [0., 1., 0., 0.],\n",
+       "       [0., 0., 1., 0.],\n",
+       "       [0., 0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 17
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T13:38:43.378524Z",
+     "start_time": "2025-11-17T13:38:43.372826Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "s.dtype",
+   "id": "69541127263a0a4b",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('float64')"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 18
   }
  ],
  "metadata": {
