[1 20] update cwiczenie1_analiza.ipynb

--- a/cwiczenie1_analiza.ipynb
+++ b/cwiczenie1_analiza.ipynb
@@ -573,6 +573,345 @@
     }
    ],
    "execution_count": 18
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T13:39:53.733433Z",
+     "start_time": "2025-11-17T13:39:53.311372Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "t = np.random.random((3, 3))\n",
+    "t"
+   ],
+   "id": "56371c9d473adf92",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.7091126 , 0.28964116, 0.96786806],\n",
+       "       [0.49894234, 0.93731917, 0.60293689],\n",
+       "       [0.2718629 , 0.40609281, 0.28967237]])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 19
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T13:40:16.417601Z",
+     "start_time": "2025-11-17T13:40:16.413603Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "t.dtype",
+   "id": "c987562b89f8d2a8",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('float64')"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 20
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T13:41:31.403125Z",
+     "start_time": "2025-11-17T13:41:31.398147Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "r = np.full((2, 2), 4)\n",
+    "r"
+   ],
+   "id": "6dab0e8dcd408a4e",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[4, 4],\n",
+       "       [4, 4]])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 21
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T13:42:23.828057Z",
+     "start_time": "2025-11-17T13:42:23.822925Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "lista2 = [[5, 6], [7, 8]]\n",
+    "lista2"
+   ],
+   "id": "e7dd65c9176ffb22",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[5, 6], [7, 8]]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 22
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T13:42:55.310125Z",
+     "start_time": "2025-11-17T13:42:55.304354Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "b = np.array(lista2)\n",
+    "b"
+   ],
+   "id": "a2524fe551cfe5aa",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[5, 6],\n",
+       "       [7, 8]])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 23
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T13:43:16.059911Z",
+     "start_time": "2025-11-17T13:43:16.055340Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(b)",
+   "id": "8f833c3cd451c7b2",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[5 6]\n",
+      " [7 8]]\n"
+     ]
+    }
+   ],
+   "execution_count": 24
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T13:43:48.158830Z",
+     "start_time": "2025-11-17T13:43:48.153733Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "b.shape",
+   "id": "bacbff34e07743fd",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 2)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 26
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "ravel() - spłaszczenie, zwraca nowy obiekt",
+   "id": "8c3640b3cfa2232f"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T13:44:41.829527Z",
+     "start_time": "2025-11-17T13:44:41.825341Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(b.ravel())",
+   "id": "2b3b91ee823a0776",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5 6 7 8]\n"
+     ]
+    }
+   ],
+   "execution_count": 27
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T13:45:39.612035Z",
+     "start_time": "2025-11-17T13:45:39.607788Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(b[0])",
+   "id": "79660b1e264c0eaf",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5 6]\n"
+     ]
+    }
+   ],
+   "execution_count": 28
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T13:47:00.330031Z",
+     "start_time": "2025-11-17T13:47:00.312036Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "print(b[0, 0])\n",
+    "print(b[0, 1])"
+   ],
+   "id": "590ff788788c51",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "6\n"
+     ]
+    }
+   ],
+   "execution_count": 29
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T13:48:00.500746Z",
+     "start_time": "2025-11-17T13:48:00.473713Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(np.float64(21))",
+   "id": "e529b8294cef2a03",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21.0\n"
+     ]
+    }
+   ],
+   "execution_count": 30
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T13:50:09.860254Z",
+     "start_time": "2025-11-17T13:50:09.856797Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(np.int64(22.0))",
+   "id": "b12e850e4df1b1c3",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22\n"
+     ]
+    }
+   ],
+   "execution_count": 31
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T13:50:40.104751Z",
+     "start_time": "2025-11-17T13:50:40.100950Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(np.bool(21))",
+   "id": "b11c08adec915697",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "execution_count": 32
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T13:50:59.915608Z",
+     "start_time": "2025-11-17T13:50:59.912363Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(np.float64(True))",
+   "id": "c76e3458e56e6b30",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n"
+     ]
+    }
+   ],
+   "execution_count": 33
   }
  ],
  "metadata": {
