--- a/cwiczenie1_analiza.ipynb
+++ b/cwiczenie1_analiza.ipynb
@@ -912,6 +912,230 @@
     }
    ],
    "execution_count": 33
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T13:53:32.883419Z",
+     "start_time": "2025-11-17T13:53:32.878775Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "arr = np.arange(1, 11, dtype=np.float64)\n",
+    "print(arr)"
+   ],
+   "id": "f069b401b39a6298",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1.  2.  3.  4.  5.  6.  7.  8.  9. 10.]\n"
+     ]
+    }
+   ],
+   "execution_count": 34
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T13:54:02.278756Z",
+     "start_time": "2025-11-17T13:54:02.244823Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "arr",
+   "id": "8b7cb1541416edc5",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1.,  2.,  3.,  4.,  5.,  6.,  7.,  8.,  9., 10.])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 36
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T13:54:18.797302Z",
+     "start_time": "2025-11-17T13:54:18.790755Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "arr.dtype",
+   "id": "727c30f13b052c90",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('float64')"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 37
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T13:56:24.377748Z",
+     "start_time": "2025-11-17T13:56:24.374894Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "arr = np.arange(12)",
+   "id": "d9f5119848de648e",
+   "outputs": [],
+   "execution_count": 40
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T13:56:25.919058Z",
+     "start_time": "2025-11-17T13:56:25.914484Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "arr.shape",
+   "id": "7285a9b2250ca601",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(12,)"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 41
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "reshape() - zmiana kształtu",
+   "id": "f0ec26ff64c19857"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T13:56:27.542272Z",
+     "start_time": "2025-11-17T13:56:27.535944Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "new_arr = arr.reshape(4, 3)\n",
+    "new_arr"
+   ],
+   "id": "83f6e0f68c7dd6e",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  1,  2],\n",
+       "       [ 3,  4,  5],\n",
+       "       [ 6,  7,  8],\n",
+       "       [ 9, 10, 11]])"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 42
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T13:57:32.632150Z",
+     "start_time": "2025-11-17T13:57:32.627481Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "new_arr = arr.reshape(3, 4)\n",
+    "new_arr"
+   ],
+   "id": "f4ab78e173b6a7b7",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  1,  2,  3],\n",
+       "       [ 4,  5,  6,  7],\n",
+       "       [ 8,  9, 10, 11]])"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 43
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T13:58:10.715907Z",
+     "start_time": "2025-11-17T13:58:10.689809Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "new_arr = arr.reshape(3, 5)  # nie zgada się kształt",
+   "id": "f0a2682f5418f155",
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "cannot reshape array of size 12 into shape (3,5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
+      "\u001B[31mValueError\u001B[39m                                Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[44]\u001B[39m\u001B[32m, line 1\u001B[39m\n\u001B[32m----> \u001B[39m\u001B[32m1\u001B[39m new_arr = \u001B[43marr\u001B[49m\u001B[43m.\u001B[49m\u001B[43mreshape\u001B[49m\u001B[43m(\u001B[49m\u001B[32;43m3\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[32;43m5\u001B[39;49m\u001B[43m)\u001B[49m\n",
+      "\u001B[31mValueError\u001B[39m: cannot reshape array of size 12 into shape (3,5)"
+     ]
+    }
+   ],
+   "execution_count": 44
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T13:58:36.096225Z",
+     "start_time": "2025-11-17T13:58:36.069282Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "new_arr = arr.reshape(3, 3)",
+   "id": "386f04502928a4c7",
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "cannot reshape array of size 12 into shape (3,3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
+      "\u001B[31mValueError\u001B[39m                                Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[45]\u001B[39m\u001B[32m, line 1\u001B[39m\n\u001B[32m----> \u001B[39m\u001B[32m1\u001B[39m new_arr = \u001B[43marr\u001B[49m\u001B[43m.\u001B[49m\u001B[43mreshape\u001B[49m\u001B[43m(\u001B[49m\u001B[32;43m3\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[32;43m3\u001B[39;49m\u001B[43m)\u001B[49m\n",
+      "\u001B[31mValueError\u001B[39m: cannot reshape array of size 12 into shape (3,3)"
+     ]
+    }
+   ],
+   "execution_count": 45
   }
  ],
  "metadata": {
