[1 22] update cwiczenie1_analiza.ipynb

--- a/cwiczenie1_analiza.ipynb
+++ b/cwiczenie1_analiza.ipynb
@@ -1136,6 +1136,66 @@
     }
    ],
    "execution_count": 45
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "ravel() - zwraca widok\\\n",
+    "operacje na widoku \"tablicy\" wpływaja na zmainy oryginalnej tablicy"
+   ],
+   "id": "270328cbcdb9869a"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T14:02:16.246731Z",
+     "start_time": "2025-11-17T14:02:16.241921Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(new_arr.ravel())",
+   "id": "650e21f2b9312459",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11]\n"
+     ]
+    }
+   ],
+   "execution_count": 46
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "flatten() - robi kopię\\\n",
+    "zmiany nie wpływają na oryginlaną tablicę"
+   ],
+   "id": "e32f2726a0776b2e"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T14:03:28.181333Z",
+     "start_time": "2025-11-17T14:03:28.175812Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(new_arr.flatten())",
+   "id": "a76d2383124b8261",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11]\n"
+     ]
+    }
+   ],
+   "execution_count": 47
   }
  ],
  "metadata": {
