[1 23] update cwiczenie1_analiza.ipynb

--- a/cwiczenie1_analiza.ipynb
+++ b/cwiczenie1_analiza.ipynb
@@ -1196,6 +1196,61 @@
     }
    ],
    "execution_count": 47
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T14:04:45.979961Z",
+     "start_time": "2025-11-17T14:04:45.976197Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "flat = new_arr.flatten()  # kopia\n",
+    "rav = new_arr.ravel()  # widok"
+   ],
+   "id": "44396347368315ac",
+   "outputs": [],
+   "execution_count": 48
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T14:05:37.750529Z",
+     "start_time": "2025-11-17T14:05:37.746983Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "flat[0] = 999  # kopia, nie zmienia oryginału\n",
+    "rav[1] = 888  # widok, wpływa na oryginał"
+   ],
+   "id": "c16736672ab9f769",
+   "outputs": [],
+   "execution_count": 49
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T14:05:39.853089Z",
+     "start_time": "2025-11-17T14:05:39.848594Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(new_arr)",
+   "id": "b21e57f10c369c54",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  0 888   2   3]\n",
+      " [  4   5   6   7]\n",
+      " [  8   9  10  11]]\n"
+     ]
+    }
+   ],
+   "execution_count": 50
   }
  ],
  "metadata": {
