--- a/cwiczenie1_analiza.ipynb
+++ b/cwiczenie1_analiza.ipynb
@@ -1251,6 +1251,216 @@
     }
    ],
    "execution_count": 50
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "transspose() - zamienia osie",
+   "id": "6f1b1a84ab3cae43"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T14:08:25.220742Z",
+     "start_time": "2025-11-17T14:08:25.214018Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(new_arr.transpose())",
+   "id": "a0f34bca0e1a87a6",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  0   4   8]\n",
+      " [888   5   9]\n",
+      " [  2   6  10]\n",
+      " [  3   7  11]]\n"
+     ]
+    }
+   ],
+   "execution_count": 51
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "resize() - zmienia rozmiar tablicy\\\n",
+    "zmienia oryginalna tablice (in-place)\\\n",
+    "brakujące elementy uzupełni zerami"
+   ],
+   "id": "a07784c86a017927"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T14:10:16.843575Z",
+     "start_time": "2025-11-17T14:10:16.834204Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "new_arr.resize(1, 12)\n",
+    "new_arr"
+   ],
+   "id": "975e7acfc28efe69",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  0, 888,   2,   3,   4,   5,   6,   7,   8,   9,  10,  11]])"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 52
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T14:11:26.435723Z",
+     "start_time": "2025-11-17T14:11:26.418483Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "arr1 = np.arange(1, 10).reshape(3, 3)\n",
+    "arr1"
+   ],
+   "id": "a6c26df4fbb5d251",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3],\n",
+       "       [4, 5, 6],\n",
+       "       [7, 8, 9]])"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 53
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T14:12:03.971154Z",
+     "start_time": "2025-11-17T14:12:03.964716Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(np.__version__)",
+   "id": "a4846a8c8d094c75",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.3.5\n"
+     ]
+    }
+   ],
+   "execution_count": 54
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### Broadcasting\n",
+    "Wykonuje operacje na wszystkich elementach tablicy\n",
+    "\n",
+    "### Zasady bradcastingu\n",
+    "wymiary muszą być zgodne\n",
+    "1. Dwa wymiary są zgodne jeśli są równe, lub jeden z nich ma rozmiar 1\n",
+    "2. Jeśli nie spełniają tych warunków -> ValueError"
+   ],
+   "id": "abd4c2ea7b983769"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T14:14:22.994675Z",
+     "start_time": "2025-11-17T14:14:22.991098Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "lista = [1, 2, 3]\n",
+    "print(2 * lista)"
+   ],
+   "id": "5f025a210411ea3",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 1, 2, 3]\n"
+     ]
+    }
+   ],
+   "execution_count": 55
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T14:15:21.142117Z",
+     "start_time": "2025-11-17T14:15:21.137558Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "arr2 = 2 * arr1\n",
+    "print(arr2)"
+   ],
+   "id": "9f12343a322c8d99",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 2  4  6]\n",
+      " [ 8 10 12]\n",
+      " [14 16 18]]\n"
+     ]
+    }
+   ],
+   "execution_count": 56
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T14:17:05.817760Z",
+     "start_time": "2025-11-17T14:17:05.809900Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "arrx = arr1 + arr2\n",
+    "arrx"
+   ],
+   "id": "4f105df235dca2f4",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 3,  6,  9],\n",
+       "       [12, 15, 18],\n",
+       "       [21, 24, 27]])"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 58
   }
  ],
  "metadata": {
