[1 25] update cwiczenie1_analiza.ipynb

--- a/cwiczenie1_analiza.ipynb
+++ b/cwiczenie1_analiza.ipynb
@@ -1461,6 +1461,520 @@
     }
    ],
    "execution_count": 58
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "hstack() - skleja tablice poziomo",
+   "id": "95d75ee1ab55eef"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T14:20:50.585101Z",
+     "start_time": "2025-11-17T14:20:50.580203Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "arr3 = np.hstack((arr1, arr2))\n",
+    "arr3"
+   ],
+   "id": "ece9736d442d63ff",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1,  2,  3,  2,  4,  6],\n",
+       "       [ 4,  5,  6,  8, 10, 12],\n",
+       "       [ 7,  8,  9, 14, 16, 18]])"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 59
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T14:20:59.354100Z",
+     "start_time": "2025-11-17T14:20:59.350298Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(arr3)",
+   "id": "ce4a20f0f18206cb",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3  2  4  6]\n",
+      " [ 4  5  6  8 10 12]\n",
+      " [ 7  8  9 14 16 18]]\n"
+     ]
+    }
+   ],
+   "execution_count": 60
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "vstack() - skleja pionowo",
+   "id": "5d1d79a482852bb2"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T14:22:03.316138Z",
+     "start_time": "2025-11-17T14:22:03.303492Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "arr4 = np.vstack((arr1, arr2))\n",
+    "print(arr4)"
+   ],
+   "id": "38b4688915f63caf",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3]\n",
+      " [ 4  5  6]\n",
+      " [ 7  8  9]\n",
+      " [ 2  4  6]\n",
+      " [ 8 10 12]\n",
+      " [14 16 18]]\n"
+     ]
+    }
+   ],
+   "execution_count": 61
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "concatenate() - skleja w wybranej osi",
+   "id": "61cd4d097c1385b5"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T14:23:05.426247Z",
+     "start_time": "2025-11-17T14:23:05.421555Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "arr5 = np.concatenate((arr1, arr2), axis=0)  # wiersze\n",
+    "arr5"
+   ],
+   "id": "ffbef534ec5d1fae",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1,  2,  3],\n",
+       "       [ 4,  5,  6],\n",
+       "       [ 7,  8,  9],\n",
+       "       [ 2,  4,  6],\n",
+       "       [ 8, 10, 12],\n",
+       "       [14, 16, 18]])"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 63
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T14:23:50.054945Z",
+     "start_time": "2025-11-17T14:23:50.050305Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "arr6 = np.concatenate((arr1, arr2), axis=1)  # kolumny\n",
+    "arr6"
+   ],
+   "id": "190c03c17287a858",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1,  2,  3,  2,  4,  6],\n",
+       "       [ 4,  5,  6,  8, 10, 12],\n",
+       "       [ 7,  8,  9, 14, 16, 18]])"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 64
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Tworzy tablicę z sekwencji",
+   "id": "d8b9bac9e04b26f3"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T14:24:59.765675Z",
+     "start_time": "2025-11-17T14:24:59.761846Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "arre1 = np.array([1, 2, 3])\n",
+    "print(arre1)"
+   ],
+   "id": "a1a73cbf50f88e30",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3]\n"
+     ]
+    }
+   ],
+   "execution_count": 65
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T14:25:27.354460Z",
+     "start_time": "2025-11-17T14:25:27.350868Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "arre2 = np.array([4, 5, 6])\n",
+    "print(arre2)"
+   ],
+   "id": "54688b704f00ebf2",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4 5 6]\n"
+     ]
+    }
+   ],
+   "execution_count": 66
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T14:26:32.519863Z",
+     "start_time": "2025-11-17T14:26:32.512782Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "np.concatenate((arre1, arre2), axis=0)",
+   "id": "2d94d05f5b803359",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 4, 5, 6])"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 68
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T14:26:58.670110Z",
+     "start_time": "2025-11-17T14:26:58.641387Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "np.concatenate((arre1, arre2), axis=1)",
+   "id": "5516df78fc10c671",
+   "outputs": [
+    {
+     "ename": "AxisError",
+     "evalue": "axis 1 is out of bounds for array of dimension 1",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
+      "\u001B[31mAxisError\u001B[39m                                 Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[69]\u001B[39m\u001B[32m, line 1\u001B[39m\n\u001B[32m----> \u001B[39m\u001B[32m1\u001B[39m \u001B[43mnp\u001B[49m\u001B[43m.\u001B[49m\u001B[43mconcatenate\u001B[49m\u001B[43m(\u001B[49m\u001B[43m(\u001B[49m\u001B[43marre1\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43marre2\u001B[49m\u001B[43m)\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43maxis\u001B[49m\u001B[43m=\u001B[49m\u001B[32;43m1\u001B[39;49m\u001B[43m)\u001B[49m\n",
+      "\u001B[31mAxisError\u001B[39m: axis 1 is out of bounds for array of dimension 1"
+     ]
+    }
+   ],
+   "execution_count": 69
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T14:28:14.189859Z",
+     "start_time": "2025-11-17T14:28:14.184777Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "print(arre1)\n",
+    "arre1.shape"
+   ],
+   "id": "8ac332bd0309ef5b",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(3,)"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 72
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T14:28:20.578089Z",
+     "start_time": "2025-11-17T14:28:20.573478Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "print(arre2)\n",
+    "arre2.shape"
+   ],
+   "id": "8cb41aa3ce93b1d6",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4 5 6]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(3,)"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 74
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "dstack() - skleja tablice w głab, dodaje trzeci wymiar",
+   "id": "24563c9a2a02951e"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T14:29:23.149912Z",
+     "start_time": "2025-11-17T14:29:23.145604Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "arr7 = np.dstack((arr1, arr2))\n",
+    "arr7"
+   ],
+   "id": "4807c6be4fd20b5a",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 1,  2],\n",
+       "        [ 2,  4],\n",
+       "        [ 3,  6]],\n",
+       "\n",
+       "       [[ 4,  8],\n",
+       "        [ 5, 10],\n",
+       "        [ 6, 12]],\n",
+       "\n",
+       "       [[ 7, 14],\n",
+       "        [ 8, 16],\n",
+       "        [ 9, 18]]])"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 76
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T14:29:36.719269Z",
+     "start_time": "2025-11-17T14:29:36.715181Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(arr7)",
+   "id": "796ecaea3878a762",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 1  2]\n",
+      "  [ 2  4]\n",
+      "  [ 3  6]]\n",
+      "\n",
+      " [[ 4  8]\n",
+      "  [ 5 10]\n",
+      "  [ 6 12]]\n",
+      "\n",
+      " [[ 7 14]\n",
+      "  [ 8 16]\n",
+      "  [ 9 18]]]\n"
+     ]
+    }
+   ],
+   "execution_count": 77
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "column_stack() - skleja jako kolumny",
+   "id": "b20c1ef74249d041"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T14:31:51.988267Z",
+     "start_time": "2025-11-17T14:31:51.983521Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "arr8 = np.arange(4, 7)\n",
+    "print(arr8)\n",
+    "arr9 = 2 * arr8\n",
+    "print(arr9)\n",
+    "\n",
+    "arr_col_stack = np.column_stack((arr8, arr9))\n",
+    "print(arr_col_stack)"
+   ],
+   "id": "ce0914bf2a88cbc4",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4 5 6]\n",
+      "[ 8 10 12]\n",
+      "[[ 4  8]\n",
+      " [ 5 10]\n",
+      " [ 6 12]]\n"
+     ]
+    }
+   ],
+   "execution_count": 78
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "row_stack() - jako wiersze",
+   "id": "32b76270bfe2900e"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T14:33:07.795153Z",
+     "start_time": "2025-11-17T14:33:07.788106Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "arr_row_stack = np.row_stack((arr8, arr9))\n",
+    "arr_row_stack"
+   ],
+   "id": "5cdc5d1330cbbed5",
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\CSComarch\\AppData\\Local\\Temp\\ipykernel_14436\\2835450636.py:1: DeprecationWarning: `row_stack` alias is deprecated. Use `np.vstack` directly.\n",
+      "  arr_row_stack = np.row_stack((arr8, arr9))\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 4,  5,  6],\n",
+       "       [ 8, 10, 12]])"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 79
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T14:34:06.941137Z",
+     "start_time": "2025-11-17T14:34:06.936577Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "result_vstack = np.vstack((arr8, arr9))\n",
+    "result_vstack"
+   ],
+   "id": "8b5f351185b67ef5",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 4,  5,  6],\n",
+       "       [ 8, 10, 12]])"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 80
   }
  ],
  "metadata": {
