[1 26] update cwiczenie1_analiza.ipynb

--- a/cwiczenie1_analiza.ipynb
+++ b/cwiczenie1_analiza.ipynb
@@ -1975,6 +1975,101 @@
     }
    ],
    "execution_count": 80
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "hsplit() - dzieli w poziomie",
+   "id": "f0a749a656c797fc"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T14:35:38.488508Z",
+     "start_time": "2025-11-17T14:35:38.484360Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "arr10 = np.arange(1, 10).reshape(3, 3)\n",
+    "print(arr10)"
+   ],
+   "id": "be684781feb6f37c",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n"
+     ]
+    }
+   ],
+   "execution_count": 81
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T14:36:33.622206Z",
+     "start_time": "2025-11-17T14:36:33.617773Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "arr_split = np.hsplit(arr10, 3)\n",
+    "print(arr_split)"
+   ],
+   "id": "5aa9bd968136143d",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[array([[1],\n",
+      "       [4],\n",
+      "       [7]]), array([[2],\n",
+      "       [5],\n",
+      "       [8]]), array([[3],\n",
+      "       [6],\n",
+      "       [9]])]\n"
+     ]
+    }
+   ],
+   "execution_count": 83
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "vsplit() - dzieli na wiersze",
+   "id": "cf26956bdc8f5ba3"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T14:38:05.259750Z",
+     "start_time": "2025-11-17T14:38:05.254014Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "arr_v_split = np.vsplit(arr10, 3)\n",
+    "arr_v_split"
+   ],
+   "id": "58807bf6cb63ef1f",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([[1, 2, 3]]), array([[4, 5, 6]]), array([[7, 8, 9]])]"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 84
   }
  ],
  "metadata": {
