[1 27] update cwiczenie1_analiza.ipynb

--- a/cwiczenie1_analiza.ipynb
+++ b/cwiczenie1_analiza.ipynb
@@ -2070,6 +2070,83 @@
     }
    ],
    "execution_count": 84
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T14:39:23.201233Z",
+     "start_time": "2025-11-17T14:39:23.196919Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "arr11 = np.arange(1, 10).reshape(3, 3)\n",
+    "print(\"Tablica w typie integer:\", arr11.dtype)"
+   ],
+   "id": "7268698367192817",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tablica w typie integer: int64\n"
+     ]
+    }
+   ],
+   "execution_count": 85
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T14:40:47.346567Z",
+     "start_time": "2025-11-17T14:40:47.341668Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# konwersja tablicy na inny typ\n",
+    "# tworzy nową tablicę\n",
+    "arr12 = arr11.astype(float)\n",
+    "print(\"Zmieniony typ na:\", arr12.dtype)"
+   ],
+   "id": "9d6ab1dfe853b644",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Zmieniony typ na: float64\n"
+     ]
+    }
+   ],
+   "execution_count": 86
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T14:42:58.530671Z",
+     "start_time": "2025-11-17T14:42:58.526185Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# zamiana na typy pythonowe\n",
+    "list1 = arr1.tolist()\n",
+    "print(\"Lista pythonowa:\", list1)\n",
+    "print(\"Typ listy:\", type(list1))"
+   ],
+   "id": "f89363f1e097f4ce",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lista pythonowa: [[1, 2, 3], [4, 5, 6], [7, 8, 9]]\n",
+      "Typ listy: <class 'list'>\n"
+     ]
+    }
+   ],
+   "execution_count": 87
   }
  ],
  "metadata": {
