[1 28] update cwiczenie1_analiza.ipynb

--- a/cwiczenie1_analiza.ipynb
+++ b/cwiczenie1_analiza.ipynb
@@ -2147,6 +2147,120 @@
     }
    ],
    "execution_count": 87
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T14:47:38.181334Z",
+     "start_time": "2025-11-17T14:47:38.176013Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "arr13 = np.arange(1, 5).reshape(2, 2)\n",
+    "arr13"
+   ],
+   "id": "e9677508743cafbf",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2],\n",
+       "       [3, 4]])"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 88
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T14:48:32.638931Z",
+     "start_time": "2025-11-17T14:48:32.633979Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "arr_copy = arr13.copy()\n",
+    "arr_view = arr13.view()\n",
+    "arr_no_copy = arr13"
+   ],
+   "id": "d23de4da76dc617f",
+   "outputs": [],
+   "execution_count": 89
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T14:50:12.570704Z",
+     "start_time": "2025-11-17T14:50:12.566334Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "print(\"Pierwotna tablica\", id(arr13))\n",
+    "print(\"Kopia głęboka\", id(arr_copy))\n",
+    "print(\"Kopia płytka (widok)\", id(arr_view))\n",
+    "print(\"Referencja\", id(arr_no_copy))"
+   ],
+   "id": "c35ba2a7858849bf",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pierwotna tablica 1775718273104\n",
+      "Kopia głęboka 1775718274256\n",
+      "Kopia płytka (widok) 1775718273776\n",
+      "Referencja 1775718273104\n"
+     ]
+    }
+   ],
+   "execution_count": 90
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T14:51:47.815672Z",
+     "start_time": "2025-11-17T14:51:47.812765Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "arr13[1] = [99, 100]",
+   "id": "5a0eb61a2e1e1f3",
+   "outputs": [],
+   "execution_count": 91
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T14:52:19.901470Z",
+     "start_time": "2025-11-17T14:52:19.897362Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "print('Widok:', arr_view)\n",
+    "print(\"Kopia:\", arr_copy)"
+   ],
+   "id": "d6972018319f82f3",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Widok: [[  1   2]\n",
+      " [ 99 100]]\n",
+      "Kopia: [[1 2]\n",
+      " [3 4]]\n"
+     ]
+    }
+   ],
+   "execution_count": 92
   }
  ],
  "metadata": {
