--- a/cwiczenie1_analiza.ipynb
+++ b/cwiczenie1_analiza.ipynb
@@ -2261,6 +2261,126 @@
     }
    ],
    "execution_count": 92
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T08:14:19.309202Z",
+     "start_time": "2025-11-18T08:14:18.422842Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "import numpy as np",
+   "id": "3946dbddb2e3b35e",
+   "outputs": [],
+   "execution_count": 2
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T08:14:21.538628Z",
+     "start_time": "2025-11-18T08:14:21.532205Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "arr14 = np.arange(0, 10)\n",
+    "print(arr14)\n",
+    "print(arr14[3:6])  # z prawej otwarty"
+   ],
+   "id": "4c82da7cb3267e15",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3 4 5 6 7 8 9]\n",
+      "[3 4 5]\n"
+     ]
+    }
+   ],
+   "execution_count": 3
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T08:15:16.403021Z",
+     "start_time": "2025-11-18T08:15:16.398504Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(arr14[2:7:3])",
+   "id": "2fa5f50dc42cd842",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2 5]\n"
+     ]
+    }
+   ],
+   "execution_count": 4
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "filtrowanie danych",
+   "id": "d1b74001902e1da4"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T08:17:17.821712Z",
+     "start_time": "2025-11-18T08:17:17.811134Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "arr15 = np.arange(21,41,2)\n",
+    "arr15"
+   ],
+   "id": "afe2f4f5f14051c4",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([21, 23, 25, 27, 29, 31, 33, 35, 37, 39])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 5
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T08:17:48.685962Z",
+     "start_time": "2025-11-18T08:17:48.677534Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(arr15[arr15 > 30]) # filtrowanie danych",
+   "id": "9bd5d19fd57ac71",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[31 33 35 37 39]\n"
+     ]
+    }
+   ],
+   "execution_count": 6
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "wczytanie csv",
+   "id": "c878c87034bae4ae"
   }
  ],
  "metadata": {
