[2 2] update cwiczenie1_analiza.ipynb

--- a/cwiczenie1_analiza.ipynb
+++ b/cwiczenie1_analiza.ipynb
@@ -2381,6 +2381,110 @@
    "cell_type": "markdown",
    "source": "wczytanie csv",
    "id": "c878c87034bae4ae"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T08:27:40.334488Z",
+     "start_time": "2025-11-18T08:27:40.327393Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "input_stock_price_array = np.genfromtxt('AAPL_stock_price_example.csv',\n",
+    "                                        delimiter=\",\", names=True, usecols=(1))\n",
+    "# usecols() - wybrane kolumny"
+   ],
+   "id": "d2fc42da047cdef3",
+   "outputs": [],
+   "execution_count": 7
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T08:27:56.868561Z",
+     "start_time": "2025-11-18T08:27:56.859281Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(input_stock_price_array.size)",
+   "id": "89903cd920dcb661",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "229\n"
+     ]
+    }
+   ],
+   "execution_count": 8
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T08:29:51.464284Z",
+     "start_time": "2025-11-18T08:29:51.439214Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "input_stock_price_array = np.genfromtxt('data/AAPL_stock_price_example.csv',\n",
+    "                                        delimiter=\",\", names=True, usecols=(1))"
+   ],
+   "id": "feed32b85934c829",
+   "outputs": [],
+   "execution_count": 9
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T08:30:01.119348Z",
+     "start_time": "2025-11-18T08:30:01.115148Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(input_stock_price_array.size)",
+   "id": "1f19acce1b7dcbb7",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "229\n"
+     ]
+    }
+   ],
+   "execution_count": 10
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T08:48:18.296699Z",
+     "start_time": "2025-11-18T08:48:18.287972Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "temp_array = []\n",
+    "with open('data/AAPL_stock_price_example.csv', \"r\") as input_file:\n",
+    "    all_lines = input_file.readlines()\n",
+    "    for each_line in all_lines:\n",
+    "        for value_from_line in each_line.rsplit(\",\")[1:]:\n",
+    "            clean_value = value_from_line.replace(\"\\n\", \"\")\n",
+    "            temp_array.append(clean_value)"
+   ],
+   "id": "6677a5fe134fcf13",
+   "outputs": [],
+   "execution_count": 11
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "119a953027b2f1f1"
   }
  ],
  "metadata": {
