[2 3] update cwiczenie1_analiza.ipynb

--- a/cwiczenie1_analiza.ipynb
+++ b/cwiczenie1_analiza.ipynb
@@ -2337,7 +2337,7 @@
    },
    "cell_type": "code",
    "source": [
-    "arr15 = np.arange(21,41,2)\n",
+    "arr15 = np.arange(21, 41, 2)\n",
     "arr15"
    ],
    "id": "afe2f4f5f14051c4",
@@ -2363,7 +2363,7 @@
     }
    },
    "cell_type": "code",
-   "source": "print(arr15[arr15 > 30]) # filtrowanie danych",
+   "source": "print(arr15[arr15 > 30])  # filtrowanie danych",
    "id": "9bd5d19fd57ac71",
    "outputs": [
     {
@@ -2479,12 +2479,192 @@
    "execution_count": 11
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T08:49:41.690067Z",
+     "start_time": "2025-11-18T08:49:41.686150Z"
+    }
+   },
    "cell_type": "code",
+   "source": "print(temp_array[:5])",
+   "id": "119a953027b2f1f1",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Close', '157.919998', '142.190002', '148.259995', '147.929993']\n"
+     ]
+    }
+   ],
+   "execution_count": 12
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T08:50:05.006170Z",
+     "start_time": "2025-11-18T08:50:05.000260Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(len(temp_array))",
+   "id": "aa595f9217ee937c",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "230\n"
+     ]
+    }
+   ],
+   "execution_count": 13
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T08:50:49.540964Z",
+     "start_time": "2025-11-18T08:50:49.534977Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "temp_array = np.delete(temp_array, 0)  # usunięcie pierwszego wiersza z nazwami kolumn",
+   "id": "bd673d2275bb88e0",
    "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "119a953027b2f1f1"
+   "execution_count": 14
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T08:51:17.471292Z",
+     "start_time": "2025-11-18T08:51:17.466203Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "temp_array.size",
+   "id": "1ff49e420bb6be3a",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "229"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 15
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T08:52:04.805193Z",
+     "start_time": "2025-11-18T08:52:04.801216Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "temp_array.dtype",
+   "id": "c49edd057ec184a1",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('<U10')"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 16
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "typ tekstowy, unicode, 10 znaków",
+   "id": "929faa0f1714e928"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "zamienic typ na float",
+   "id": "85ad2889f36fdffe"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "ctrl shift f - wyszukiwanie w kodzie",
+   "id": "b961dc23edfede88"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T08:55:35.743828Z",
+     "start_time": "2025-11-18T08:55:35.735260Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "input_stock_price = temp_array.astype(float) # zamiana na float",
+   "id": "293d4e946a820f5d",
+   "outputs": [],
+   "execution_count": 17
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T08:56:12.245188Z",
+     "start_time": "2025-11-18T08:56:12.240964Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(input_stock_price[:5])",
+   "id": "51e3f036ed1bc9ba",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[157.919998 142.190002 148.259995 147.929993 150.75    ]\n"
+     ]
+    }
+   ],
+   "execution_count": 19
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T08:57:47.259399Z",
+     "start_time": "2025-11-18T08:57:47.249516Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "sortd_stock_price = np.sort(input_stock_price)[::-1]\n",
+    "sortd_stock_price[0]"
+   ],
+   "id": "67e9091d64a19f2c",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(267.100006)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 20
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "https://www.kaggle.com/datasets",
+   "id": "ee915b697820df92"
   }
  ],
  "metadata": {
