[2 5] update cwiczenie2_pandas.ipynb

--- a/cwiczenie2_pandas.ipynb
+++ b/cwiczenie2_pandas.ipynb
@@ -259,6 +259,25 @@
     }
    ],
    "execution_count": 4
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T09:35:51.470046Z",
+     "start_time": "2025-11-18T09:35:51.464456Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "product_data = {\n",
+    "    \"product a\": [13, 20, 0, 10],\n",
+    "    \"product b\": [10, 30, 17, 10],\n",
+    "    \"product c\": [6, 9, 10, 0],\n",
+    "}"
+   ],
+   "id": "ce62ca5519ec9391",
+   "outputs": [],
+   "execution_count": 5
   }
  ],
  "metadata": {
