[2 6] update cwiczenie2_pandas.ipynb

--- a/cwiczenie2_pandas.ipynb
+++ b/cwiczenie2_pandas.ipynb
@@ -278,6 +278,19 @@
    "id": "ce62ca5519ec9391",
    "outputs": [],
    "execution_count": 5
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T09:36:40.924285Z",
+     "start_time": "2025-11-18T09:36:40.919448Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "miasta = [\"Kielce\", \"Poznań\", \"Warszwa\", \"Kraków\"]",
+   "id": "7a9b73a3b42a33d8",
+   "outputs": [],
+   "execution_count": 6
   }
  ],
  "metadata": {
