--- a/cwiczenie2_pandas.ipynb
+++ b/cwiczenie2_pandas.ipynb
@@ -651,6 +651,46 @@
     }
    ],
    "execution_count": 13
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T09:46:09.591244Z",
+     "start_time": "2025-11-18T09:46:09.586288Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "import matplotlib.pyplot as plt",
+   "id": "645bb0fad8f7425a",
+   "outputs": [],
+   "execution_count": 14
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T09:47:18.161768Z",
+     "start_time": "2025-11-18T09:47:18.153855Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "data.loc[\"Warszwa\"] > 10 # wyciagnęlismy pojedynczy wiersz",
+   "id": "994533ad5a541334",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "product a    False\n",
+       "product b     True\n",
+       "product c    False\n",
+       "Name: Warszwa, dtype: bool"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 16
   }
  ],
  "metadata": {
